# LottieConverter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  gif.h  gif.h_noload  gif_quantize.c  lottie_export.cpp  lottie_export.h  memcheck.sh
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
test/: !LICENCE.txt  1.tgs  2.tgs  3.tgs  4.tgs  5.json  6.json  7.json  run.sh
